--- a/src/components/menu/MenuSection/MenuSection.css
+++ b/src/components/menu/MenuSection/MenuSection.css
@@ -175,9 +175,10 @@
 }
 .Brand_Menu .Recipe_Card .Recipe_img {
   position: absolute;
-  left: -112px;
-  width: 49%;
-  top: -66px;
+  left: -28px;
+  width: 140px;
+  top: -13px;
+  height: 140px;
 }
 .Brand_Menu .Recipe_Card .Recipe_info {
   width: 60%;
@@ -188,6 +189,7 @@
   height: 100%;
   object-fit: cover;
   margin: auto;
+  border-radius: 50%;
 }
 .Brand_Menu .Recipe_Card .Recipe_info h6 {
   font-size: 16px;
@@ -218,6 +220,85 @@
 #star {
   color: #ffa200;
   font-size: 20px;
+}
+/* Recipe_Details_Card */
+.Recipe_container {
+  height: 900px;
+  background-color: #fff;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  border-radius: 20px;
+}
+.Recipe_Details_Card {
+  padding: 4%;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+.Recipe_Details_Card .Recipe_info {
+  margin-top: 100px;
+  width: 50%;
+}
+.Recipe_Details_Card .Recipe_info .details {
+  margin-top: 50px;
+}
+.Recipe_Details_Card .Recipe_info .details p {
+  width: 80%;
+  margin: 19px 0;
+}
+.Recipe_Details_Card .Recipe_info .details ul {
+  padding: 0;
+}
+.Recipe_Details_Card .Recipe_info .details ul li {
+  display: inline-block;
+  background-color: #ffcccc;
+  padding: 7px;
+  border-radius: 5px;
+  margin: 5px;
+}
+.Recipe_Details_Card .Recipe_info .cal_pri {
+  margin-top: 50px;
+}
+.Recipe_Details_Card .Recipe_info .cal_pri .kal img {
+  width: 100px;
+  margin-bottom: 20px;
+}
+#MoneyLogo {
+  width: 86px;
+}
+.Recipe_Details_Card .Recipe_info .cal_pri .kal span {
+  font-size: 30px;
+}
+#price {
+  margin-left: 17px;
+}
+.Recipe_Details_Card .Recipe_images {
+  width: 50%;
+}
+.Recipe_Details_Card .Recipe_images .swiper {
+  height: 100%;
+  border-radius: 20px;
+}
+.Recipe_Details_Card .Recipe_images .swiper .swiper-wrapper .swiper-slide img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 20px;
+}
+.Go_back {
+  position: absolute;
+  top: 50px;
+  left: 35px;
+  color: #bbbbbb;
+  z-index: 9999;
+}
+.Recipe_card_Modal .modal-body {
+  padding: 0 !important;
+}
+.Recipe_card_Modal .modal-content {
+  height: 75%;
+}
+.Recipe_card_Modal .modal-dialog {
+  max-width: 59% !important;
 }
 /* Keyframes for fade up animation */
 @keyframes fadeUp {
@@ -353,9 +434,10 @@
   }
   .Brand_Menu .Recipe_Card .Recipe_img {
     position: absolute;
-    left: -73px;
-    width: 52%;
-    top: -50px;
+    left: -20px;
+    width: 100px;
+    top: -6px;
+    height: 100px;
   }
   .Brand_Menu .Recipe_Card .Recipe_info {
     width: 75%;
@@ -397,5 +479,102 @@
   #star {
     color: #ffa200;
     font-size: 20px;
+  }
+  .Recipe_card_Modal .modal-dialog {
+    max-width: 100% !important;
+  }
+
+  .Recipe_Details_Card {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+  .Recipe_Details_Card .Recipe_info .details p {
+    font-size: 12px;
+  }
+  .Recipe_Details_Card .Recipe_info .cal_pri {
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-around;
+    align-items: baseline;
+  }
+  .Recipe_Details_Card .Recipe_info .cal_pri .kal img {
+    width: 50px;
+  }
+  #MoneyLogo {
+    width: 40px;
+  }
+  .Recipe_Details_Card .Recipe_info .cal_pri .kal span {
+    font-size: 15px;
+  }
+  .Recipe_Details_Card .Recipe_info .details ul li {
+    margin: 2px;
+    font-size: 10px;
+  }
+  .Recipe_Details_Card .Recipe_images {
+    width: 100%;
+    height: 46%;
+  }
+  .Recipe_Details_Card .Recipe_info {
+    margin-top: 30px;
+    width: 100%;
+  }
+  .Go_back {
+    top: 29px;
+    left: 30px;
+    color: #f5f5f5;
+    font-size: 20px;
+  }
+}
+@media (min-width: 1200px) and (max-width: 1800px) {
+  .Recipe_container {
+    height: 400px;
+  }
+  .Recipe_Details_Card h1 {
+    font-size: 20px;
+  }
+  .Recipe_Details_Card Recipe_images {
+    width: 50%;
+  }
+  .Recipe_Details_Card .Recipe_info .details {
+    margin-top: 10px;
+  }
+  .Recipe_Details_Card .Recipe_info .details h2 {
+    font-size: 25px;
+  }
+  .Recipe_Details_Card .Recipe_info .details p {
+    font-size: 10px;
+    width: 90%;
+  }
+  .Recipe_Details_Card .Recipe_info {
+    margin-top: 20px;
+  }
+  .Go_back {
+    top: 6px;
+    left: 13px;
+
+    width: 20px !important;
+  }
+  .Recipe_Details_Card .Recipe_info .cal_pri {
+    margin-top: 30px;
+    display: flex;
+    align-items: baseline;
+    justify-content: space-around;
+  }
+  .Recipe_Details_Card .Recipe_info .cal_pri .kal img {
+    width: 40px;
+    margin-bottom: 0px;
+  }
+  #MoneyLogo {
+    width: 40px;
+  }
+  .Recipe_Details_Card .Recipe_info .cal_pri .kal span {
+    font-size: 15px;
+  }
+  .Recipe_Details_Card .Recipe_info .details ul li {
+    margin: 2px;
+    font-size: 10px;
+  }
+  .Brand_Menu .Recipe_Card .Recipe_img {
+    left: -47px;
   }
 }
