--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;500;700;900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600&family=Readex+Pro:wght@400;500;600;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Pacifico&family=REM:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 * {
   padding: 0;
   margin: 0;
-  font-family: "Comfortaa", sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 body {
   position: relative;
@@ -13,28 +11,31 @@ body {
 #root {
   height: 100%;
 }
+.gaTCvF {
+  background-color: #000931 !important;
+  border-radius: 20px;
+  width: 100% !important;
+}
 .dzu-previewContainer {
   width: 100px;
   height: 100px;
   display: inline-block;
+  margin: 5px;
 }
 .dzu-previewContainer img {
   width: 100%;
   height: 100%;
+  border-radius: 5px;
 }
-.franchise-container input[type="text"],
-select,
-textarea {
-  width: 60%;
-  padding: 12px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-  margin-top: 6px;
-  margin-bottom: 16px;
-  resize: vertical;
+.fvWJS a {
+  color: rgb(255 255 255 / 58%) !important;
 }
-
+a {
+  text-decoration: auto !important;
+}
+button {
+  font-size: 12px !important;
+}
 .franchise-container input[type="submit"] {
   background-color: #04aa6d;
   color: white;
@@ -108,14 +109,14 @@ textarea {
 
 /* containers*/
 @media (min-width: 1800px) {
-  .container {
+  .D_container {
     max-width: 1440px !important;
     margin-left: 18% !important;
   }
 }
 @media (min-width: 1200px) and (max-width: 1800px) {
-  .container {
-    max-width: 1000px !important;
-    margin-left: 13% !important;
+  .D_container {
+    max-width: 900px !important;
+    margin-left: 24% !important;
   }
 }
