--- a/src/components/Dashboard/utilis/utilis.css
+++ b/src/components/Dashboard/utilis/utilis.css
@@ -1,19 +1,23 @@
 .AdminNavbar {
   height: 50px;
-  background-color: #00043b;
+  background-color: #000931;
   padding: 20px;
   border-radius: 10px;
-  margin-top: 30px !important;
+  margin-top: 10px !important;
   margin-bottom: 40px;
   color: #fff;
   display: flex;
   align-items: center;
 }
-.sideNav {
+.SideNav_container {
   position: fixed;
   top: 0;
+  margin: 10px;
   bottom: 0;
-  width: 20%;
+  width: 11%;
+}
+.sideNav {
+  height: 100%;
 }
 .StaticCard {
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
